agrego div principal

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
     <img class="principal-img" src="./assets/img/5190433.jpg" alt="">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div class="principal-container">Hola</div>
     
   </body>
 </html>
